<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings">Settings</string>
    <string name="you_can_test">You can test keyboard here</string>
    <string name="welcome_to_keyb">Welcome to VKeyboard!</string>
    <string name="welcome_cta">Customize your keyboard with VKeyboard! Choose from a variety of themes and layouts to
        create a keyboard that is uniquely you.
    </string>
    <string name="enable_in_settings">Enable in settings</string>
    <string name="choose_from_ime_list">Choose from IME list</string>
    <string name="keyb_customize">Customize keyboard</string>
    <string name="heavy_press">Heavy press</string>
    <string name="long_press">Long press</string>
    <string name="layout_name">Layout name:</string>
    <string name="save">Save</string>
    <string name="file_saved">Saved!</string>
    <string name="file_save_fail">Failed to save file</string>
    <string name="file_imported">Successfully imported!</string>
    <string name="file_import_fail">Failed to import</string>
    <string name="file_importing">Importing…</string>
    <string name="file_saving">Saving…</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="file_name">File name</string>
    <string name="key_mode">Key mode</string>
    <string name="mode_popup">Popup</string>
    <string name="mode_joy">Joystick</string>
    <string name="mode_meta">Meta</string>
    <string name="key_label">Label</string>
    <string name="keycode">KeyCode</string>
    <string name="meta_mask">Meta Mask</string>
    <string name="custom_actions">Custom Actions</string>
    <string name="style">Style</string>
    <string name="sound">Sound</string>
    <string name="new_layout">New layout</string>
    <string name="mode_random">Random</string>
    <string name="add">Add</string>
    <string name="prebuilt_layouts">Prebuilt layouts</string>
    <string name="prebuilt_themes">Prebuilt themes</string>
    <string name="themes">Themes</string>
    <string name="based_on_layout">Based on:</string>
    <string name="layout">Layout</string>
    <string name="new_theme">New theme</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_unsaved">All unsaved changes will be lost. Are you sure?</string>
    <string name="confirm_delete_key">Are you sure you want to delete this key?</string>
    <string name="delete_row">Delete row</string>
    <string name="enter_keycode">Enter KeyCode</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_meta_code">Enter Meta Mask</string>
    <string name="enter_layout_name">Enter layout name</string>
    <string name="enter_keycode_swipe_top">Enter KeyCode for swipe top</string>
    <string name="enter_keycode_swipe_left">Enter KeyCode for swipe left</string>
    <string name="enter_keycode_swipe_right">Enter KeyCode for swipe right</string>
    <string name="enter_keycode_swipe_bottom">Enter KeyCode for swipe bottom</string>
    <string name="title_mid_action">Middle button action</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="position_top">Top</string>
    <string name="position_right">Right</string>
    <string name="borders">Borders</string>
    <string name="position_bottom">Bottom</string>
    <string name="position_left">Left</string>
    <string name="style_width_label">Width (default=1)</string>
    <string name="style_height_label">Height (default=1)</string>
    <string name="row">Row</string>
    <string name="row_preferences">Row Preferences</string>
    <string name="edit_colors">Edit colors</string>
    <string name="style_visible">Visible</string>
    <string name="set_theme">Set theme</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <string name="theme_set_title">Set theme</string>
    <string name="themes_curently_in_use">"Themes currently in use:\nDay: %s\nNight: %s\nWhich theme would you like to replace?"</string>
    <string name="confirm_delete_row">Are you sure you want to delete this row?</string>
    <string name="color_settings">Color settings</string>
    <string name="name">Name:</string>
    <string name="editor_title_layout">Editing layout</string>
    <string name="editor_title_theme">Editing theme</string>
    <string name="theme_editing_title">Editing theme: %s</string>
    <string name="edit_raw">Edit RAW</string>
    <string name="delete_file_title">Delete file</string>
    <string name="delete_file_confirmation">Are you sure you want to delete this file?</string>
    <string name="style_padding_label">Padding(px)</string>
    <string name="style_radius_label">Radius(px)</string>
    <string name="raw">RAW</string>
    <string name="add_key">Add Key</string>
    <string name="add_row">Add Row</string>
</resources>
