<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/borders"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <CheckBox
                android:text="@string/position_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_border_top"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent">
        <CheckBox
                android:text="@string/position_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_border_left"/>
        <CheckBox
                android:text="@string/position_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_border_bottom"/>
        <CheckBox
                android:text="@string/position_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_border_right"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
            android:paddingTop="10dp"
            android:text="@string/style_width_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <EditText
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_width"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:paddingTop="10dp"
                android:text="@string/style_height_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_height"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:paddingTop="10dp"
                android:text="@string/style_padding_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_padding"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:paddingTop="10dp"
                android:text="@string/style_radius_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_radius"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <CheckBox
                android:text="@string/style_visible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/checkbox_visible"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/button_edit_colors"
                android:text="@string/edit_colors"/>
    </LinearLayout>
</LinearLayout>