<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <ImageButton
                android:layout_width="48sp"
                android:layout_height="48dp"
                android:src="@android:drawable/ic_menu_delete"
                android:id="@+id/button_delete"
                android:contentDescription="@string/delete"/>
    </LinearLayout>
    <TextView
            android:text="@string/style_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row_height"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <CheckBox
                android:text="@string/style_visible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/checkbox_visible"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/button_edit_colors"
                android:text="@string/edit_colors"/>
    </LinearLayout>
</LinearLayout>