<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_margin="20dp"
              android:gravity="center"
              android:layout_height="match_parent">
    <TextView
            android:text="@string/layout_name"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    <EditText
            android:id="@+id/new_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:inputType="textNoSuggestions"/>
    <LinearLayout
            android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <TextView
                android:gravity="center"
                android:text="@string/based_on_layout"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
    <Spinner
            android:id="@+id/new_layout_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>

    </LinearLayout>
    <Button
            android:text="@string/save"
            android:id="@+id/new_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>