<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:theme="@android:style/Theme.DeviceDefault.Light.Panel"
              android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/key_mode"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Space
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/row"
                        android:id="@+id/button_edit_row"
                        android:contentDescription="@string/row"/>
                <ImageButton
                        android:layout_width="48sp"
                        android:layout_height="48dp"
                        android:src="@android:drawable/ic_menu_delete"
                        android:id="@+id/button_delete"
                        android:contentDescription="@string/delete"/>

            </LinearLayout>

            <RadioGroup
                    android:id="@+id/rad_group"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <RadioButton
                        android:text="@string/mode_popup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_popup"
                        android:layout_weight="1"/>

                <RadioButton
                        android:text="@string/mode_joy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_joy"
                        android:layout_weight="1"/>
            </RadioGroup>
            <RadioGroup
                    android:id="@+id/rad_group2"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <RadioButton
                        android:text="@string/mode_meta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_meta"
                        android:layout_weight="1"/>
                <RadioButton
                        android:visibility="gone"
                        android:text="@string/mode_random"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_random"
                        android:layout_weight="1"/>
            </RadioGroup>

            <LinearLayout
                    android:id="@+id/edit_popup"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button1"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button2"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button3"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button4"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button_midpopup"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button5"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button6"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button7"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button8"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/edit_joy"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Button
                            android:visibility="invisible"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button22"/>
                    <Button
                            android:visibility="invisible"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button42"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button_midjoy"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button52"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Button
                            android:visibility="invisible"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"/>
                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button72"/>
                    <Button
                            android:visibility="invisible"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/edit_meta"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:text="@string/key_label"
                        android:id="@+id/key_meta_label"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        android:text="@string/keycode"
                        android:id="@+id/meta_keycode"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        android:text="@string/meta_mask"
                        android:id="@+id/meta_mask"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/edit_random"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:text="@string/add"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/rand_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <Button
                        android:text="@string/long_press"
                        android:id="@+id/button_hold"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        android:text="@string/heavy_press"
                        android:id="@+id/button_hard"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <Button
                        android:visibility="gone"
                        android:text="@string/custom_actions"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_cust_act"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <Button
                        android:text="@string/style"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_style"/>
                <Button
                        android:visibility="gone"
                        android:text="@string/sound"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_sound"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <Button
                        android:text="@string/layout"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_layout"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>